# pymediate

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_TODO.md  LICENSE  OPERATIONS.md  PIPELINE_COMPLETION_SUMMARY.md  PIPELINE_IMPLEMENTATION.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  SETUP_COMPLETE.md  TASKS_GUIDE.md  VERIFICATION_REPORT.md  cliff.toml  data.json  mkdocs.yml  mypy.ini  pymediate.code-workspace  pyproject.toml  pytest.ini  ruff.toml  tasks.toml
examples/005-mediator-vs-service-sync/: README.md  pyproject.toml
examples/005-mediator-vs-service-sync/tests/: test_before.py
examples/005-why-a-mediator/: README.md  pyproject.toml
examples/005-why-a-mediator/src/orders/: __init__.py
examples/005-why-a-mediator/tests/: test_after.py  test_before.py
examples/010-basic/: README.md  app.py  pyproject.toml  test_app.py
examples/020-events/: README.md  app.py  pyproject.toml  test_app.py
examples/020-events-sync/: README.md  app.py  pyproject.toml  test_app.py
examples/040-pipeline-behaviors/: README.md  pyproject.toml
examples/040-pipeline-behaviors-sync/: README.md  pyproject.toml  pyrightconfig.json
examples/040-pipeline-behaviors-sync/src/taskboard/: app.py  behaviors.py  domain.py
examples/040-pipeline-behaviors-sync/tests/: test_pipeline.py
examples/040-pipeline-behaviors/src/taskboard/: __init__.py  app.py  behaviors.py  domain.py
examples/040-pipeline-behaviors/tests/: test_pipeline.py
examples/045-behaviors-vs-decorators/: README.md  pyproject.toml  pyrightconfig.json
examples/045-behaviors-vs-decorators-sync/: README.md  pyproject.toml
examples/045-behaviors-vs-decorators-sync/src/taskboard/: __init__.py  app.py  behavior.py  decorator.py  domain.py  limiter.py
examples/045-behaviors-vs-decorators-sync/tests/: test_behavior.py  test_behavior_swap.py  test_decorator.py  test_decorator_friction.py
examples/045-behaviors-vs-decorators/src/taskboard/: __init__.py  app.py  behavior.py  decorator.py
examples/045-behaviors-vs-decorators/tests/: test_behavior.py  test_behavior_swap.py  test_decorator.py  test_decorator_friction.py
examples/050-handler-composition-sync/: README.md  pyproject.toml
examples/050-handler-composition-sync/src/orders/: __init__.py  app.py  domain.py  handlers.py
examples/050-handler-composition-sync/src/taskboard/: __init__.py  app.py  dispatch.py  domain.py  operations.py
examples/050-handler-composition-sync/tests/: test_composition.py
examples/060-messages/: README.md  pyproject.toml
examples/060-messages-sync/: README.md  pyproject.toml  pyrightconfig.json
examples/060-messages-sync/src/taskboard/: __init__.py  app.py  handlers.py  messages.py
examples/060-messages-sync/src/weather/: __init__.py  app.py  handlers.py  messages.py
examples/060-messages-sync/tests/: test_messages.py
examples/060-messages/src/taskboard/: __init__.py  app.py  domain.py  handlers.py  messages.py
examples/060-messages/src/weather/: app.py  handlers.py  messages.py
examples/060-messages/tests/: test_messages.py
examples/065-validation/: README.md  pyproject.toml
examples/065-validation-sync/: README.md  pyproject.toml
examples/065-validation-sync/src/shop/: __init__.py  api.py  core.py
examples/065-validation-sync/tests/: test_validation.py
examples/065-validation/src/shop/: api.py  core.py
examples/065-validation/tests/: test_validation.py
examples/070-error-handling/: README.md  pyproject.toml
examples/070-error-handling-sync/: README.md  pyproject.toml
examples/070-error-handling-sync/src/shop/: __init__.py  api.py  cli.py  core.py  leaky.py
examples/070-error-handling-sync/tests/: test_error_handling.py
examples/070-error-handling/src/shop/: api.py  cli.py  core.py  leaky.py
examples/070-error-handling/tests/: test_error_handling.py
examples/075-authorization/: README.md  pyproject.toml
examples/075-authorization-sync/: README.md  pyproject.toml
examples/075-authorization-sync/src/vault/: api.py  authn.py  cli.py  core.py
examples/075-authorization-sync/tests/: test_authorization.py
examples/075-authorization/src/vault/: __init__.py  api.py  authn.py  cli.py  core.py
examples/075-authorization/tests/: test_authorization.py
examples/080-cqrs/: README.md  pyproject.toml
examples/080-cqrs-sync/: README.md  pyproject.toml
examples/080-cqrs-sync/src/catalog/: __init__.py  app.py  (+3 more)
examples/080-cqrs-sync/tests/: test_cqrs.py
examples/080-cqrs/docs/: architecture.md
examples/080-cqrs/tests/: test_cqrs.py
examples/090-adapters/: README.md  pyproject.toml
examples/090-adapters-sync/: README.md  pyproject.toml
examples/090-adapters-sync/tests/: test_fastapi.py  test_flask.py
examples/090-adapters/tests/: test_aiohttp.py  test_fastapi.py
examples/100-dependency-injection/: README.md  app.py  pyproject.toml  test_app.py
examples/100-dependency-injection-sync/: README.md  app.py  pyproject.toml  test_app.py
examples/100-hexagonal-architecture/: README.md  compose.aws.yaml  compose.azure.yaml  configuration.schema.json  pyproject.toml  pyrightconfig.json
examples/100-hexagonal-architecture/configuration/: aws.yaml  azure.yaml  default.yaml
examples/100-hexagonal-architecture/docker/: Dockerfile  Dockerfile.dockerignore
examples/100-hexagonal-architecture/docs/: audit-journal.md  background-processing.md  testing.md  third-party-abstractions.md
examples/100-hexagonal-architecture/scripts/: demo.py
examples/100-hexagonal-architecture/todo/: restate-refund-workflow.md
examples/110-testing-sync/: README.md  app.py  pyproject.toml  test_composition.py  test_handlers.py  test_integration.py  test_registry_gotcha.py
examples/120-custom-provider/: README.md  app.py  pyproject.toml  test_app.py
examples/120-custom-provider-sync/: README.md  app.py  pyproject.toml  test_app.py
examples/130-cqrs/: README.md  pyproject.toml
examples/130-cqrs/docs/: architecture.md
examples/130-cqrs/tests/: test_cqrs.py
(+673 files in other folders)
