[project]
name = "pymediate"
version = "0.1.0"
description = "A type-safe mediator pattern implementation for Python 3.12+"
readme = "README.md"
authors = [
    { name = "sina-al", email = "27771210+sina-al@users.noreply.github.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.optional-dependencies]
di = [
    "dependency-injector>=4.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "poethepoet>=0.31.1",
    "pytest-xdist>=3.8.0",
]
test = [
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "pytest-asyncio>=1.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe]
include = "tasks.toml"
