[project]
name = "pymediate"
version = "0.1.0"
description = "A type-safe mediator pattern implementation for Python 3.12+"
readme = "README.md"
authors = [
    { name = "sina-al", email = "27771210+sina-al@users.noreply.github.com" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.optional-dependencies]
di = [
    "dependency-injector>=4.41.0"
]

[dependency-groups]
dev = [
    "ruff>=0.8.4", 
    "poethepoet>=0.31.1",
    "mypy>=1.13.0",
]
test = [
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "pytest-asyncio>=1.2.0",
    "pytest-xdist>=3.8.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv]
# Single source of truth for the uv version: read locally by `uv` itself (errors on mismatch)
# and automatically by astral-sh/setup-uv in CI (falls back to pyproject.toml when no `version:`
# input is given). Bump with `uv run poe update-uv` — don't hand-edit.
required-version = "==0.11.26"

[tool.poe]
include = "tasks.toml"
