[project]
name = "pymediate"
dynamic = ["version"]
description = "A type-safe mediator pattern implementation for Python 3.12+"
readme = "README.md"
authors = [
    { name = "sina-al", email = "27771210+sina-al@users.noreply.github.com" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []
keywords = ["mediator", "cqrs", "dependency-injection", "type-safe", "request-dispatch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sina-al/pymediate"
Documentation = "https://sina-al.github.io/pymediate/"
Repository = "https://github.com/sina-al/pymediate"
Issues = "https://github.com/sina-al/pymediate/issues"
Changelog = "https://github.com/sina-al/pymediate/releases"

[project.optional-dependencies]
di = [
    "dependency-injector>=4.41.0"
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "poethepoet>=0.31.1",
    "mypy>=1.13.0",
    "griffelib>=2.1.0",
    "typer>=0.26.8",
    "rich>=15.0.0",
]
test = [
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "pytest-asyncio>=1.2.0",
    "pytest-xdist>=3.8.0",
    "basedpyright>=1.39.9",
    "hypothesis>=6.100",
]
[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

# The version is derived from git tags (vX.Y.Z) at build time — there is no version string
# in the repo. Untagged builds get a dev version (e.g. 0.1.5.dev3+g1a2b3c4). Release tags are
# created by tag-release.yml when a release PR merges into `stable`; see OPERATIONS.md.
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Only for environments where git metadata is unavailable entirely (e.g. building from a
# bare source tree); CI checkouts fetch tags so releases never hit this.
fallback_version = "0.0.0+unknown"

[tool.hatch.build.targets.wheel]
packages = ["src/pymediate"]

[tool.uv]
# Single source of truth for the uv version: read locally by `uv` itself (errors on mismatch)
# and automatically by astral-sh/setup-uv in CI (falls back to pyproject.toml when no `version:`
# input is given). Bump with `uv run poe update-uv` — don't hand-edit.
required-version = "==0.11.26"

# TestPyPI staging index — release.yml publishes here (`uv publish --index testpypi`) before
# the real PyPI publish, as a dry run against the exact same Trusted Publishing mechanism.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.poe]
include = "tasks.toml"
