[project]
name = "pymediate-example-040-pipeline-behaviors"
version = "0.1.0"
description = "Apply ordered pipeline behaviors to selected asynchronous request types"
requires-python = ">=3.12"
dependencies = [
    # Loose lower bound per the examples contract: the release pipeline re-pins this to the
    # exact release candidate on TestPyPI (scripts/run_examples.py).
    "pymediate>=0.6.0",
]

[project.scripts]
taskboard = "taskboard.app:run"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
# Depend on the in-branch pymediate source by default; the release runner strips this
# line in its temp copy and re-pins to the build under test (scripts/run_examples.py).
pymediate = { path = "../..", editable = true }

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
