[project]
name = "pymediate-example-messages"
version = "0.1.0"
description = "Requests as immutable, self-validating value objects (frozen, slots, repr, __post_init__)"
requires-python = ">=3.12"
dependencies = [
    # Loose lower bound per the examples contract: the release pipeline re-pins this to the
    # exact release candidate on TestPyPI (scripts/run_examples.py).
    "pymediate>=0.5.0",
]

[project.scripts]
weather = "weather.app:run"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
