[project]
name = "pymediate-example-validation"
version = "0.1.0"
description = "Where validation goes: Pydantic DTO at the edge, command invariants in the core"
requires-python = ">=3.12"
dependencies = [
    "pymediate>=0.5.0",
    "fastapi>=0.115",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "httpx2>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
