[project]
name = "pymediate-example-cqrs-sync"
version = "0.1.0"
description = "Commands and queries as separate handlers over separate stores, on pymediate.sync"
requires-python = ">=3.12"
dependencies = [
    # Loose lower bound per the examples contract: the release pipeline re-pins this to the
    # exact release candidate on TestPyPI (scripts/run_examples.py).
    "pymediate>=0.5.0",
]

[project.scripts]
catalog = "catalog.app:run"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalog"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
