[project]
name = "pymediate-example-custom-provider-sync"
version = "0.1.0"
description = "ServiceProvider on pymediate.sync: implement it yourself over a non-pymediate container"
requires-python = ">=3.12"
dependencies = [
    # Loose lower bound per the examples contract: the release pipeline re-pins this to the
    # exact release candidate on TestPyPI (scripts/run_examples.py).
    "pymediate>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
# An example is an application, not a distributable package: nothing to build or install.
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
